--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,31 @@ build*/
 *.Release
 *.o
 Makefile
+ExFtpClient.exe
+ExFtpClient.ilk
+ExFtpClient.obj
+ExFtpClient.pdb
+ExFtpClient.vc.pdb
+FtpTask.obj
+MutiSelectTreeView.obj
+TaskExecutor.obj
+TestUi.obj
+ftpclient.obj
+main.obj
+moc_ExFtpClient.cpp
+moc_ExFtpClient.obj
+moc_FtpTask.cpp
+moc_FtpTask.obj
+moc_MutiSelectTreeView.cpp
+moc_MutiSelectTreeView.obj
+moc_TaskExecutor.cpp
+moc_TaskExecutor.obj
+moc_TestUi.cpp
+moc_TestUi.obj
+moc_ftpclient.cpp
+moc_ftpclient.obj
+moc_predefs.h
+moc_qftp.cpp
+qftp.moc
+qftp.obj
+qurlinfo.obj
